# local-document-server

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SKILL.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml
alembic/: env.py
alembic/versions/: 39f6ce3e0968_initial_schema.py
mcp-server/: package-lock.json  package.json  tsconfig.json
mcp-server/src/: client.ts  config.ts  index.ts  server.ts
mcp-server/src/tools/: add-document.ts  index.ts  list-documents.ts  read-document.ts  search-documents.ts  update-document.ts
mcp-server/tests/: client.test.ts
mcp-server/tests/tools/: error-handling.test.ts  list-documents.test.ts  read-document.test.ts  search-documents.test.ts  update-document.test.ts
mcp-server/tests/transport/: sse.test.ts
src/doc_server/: config.py  database.py  main.py  models.py  schemas.py  utils.py
src/doc_server/routers/: documents.py  search.py
src/doc_server/services/: chunking.py  embedding.py  search.py  storage.py
src/doc_server/stores/: chunk_store.py  document_store.py
tests/: conftest.py  test_chunking.py  test_edit.py  test_pgvector.py  test_search.py  test_serving.py  test_upload.py
